<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/MainEntry">

    <fragment
        android:id="@+id/MainEntry"
        android:name="com.example.myapplication.MainEntry"
        android:label="@string/main_entry_frag_label"
        tools:layout="@layout/main_entry">
        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/PTIModule" />
    </fragment>
    <fragment
        android:id="@+id/PTIModule"
        android:name="com.example.myapplication.PTIModule"
        android:label="@string/pti_module_label"
        tools:layout="@layout/pti_module">
        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/MainEntry" />
        <action
            android:id="@+id/action_PTIModule_to_Performance"
            app:destination="@id/Performance" />
    </fragment>
    <fragment
        android:id="@+id/Performance"
        android:name="com.example.myapplication.Performance"
        android:label="@string/performance_module_label"
        tools:layout="@layout/fragment_performance">
        <action
            android:id="@+id/action_Performance_to_PTIModule"
            app:destination="@id/PTIModule" />
    </fragment>

</navigation>